Site Configurator Dialog with CKE htmlarea - BodyMask not visible when opening dialog in fullscreen mode #473 -also sticky toolbar fixed for SCD

--- a/src/main/resources/assets/admin/common/styles/api/util/htmlarea/html-area.less
+++ b/src/main/resources/assets/admin/common/styles/api/util/htmlarea/html-area.less
@@ -90,6 +90,21 @@
   }
 }
 
+.site-configurator-dialog {
+  .html-area .cke_top {
+    top: -15px;
+  }
+}
+
+// when fullscreen mode triggered 'site-configurator-dialog' class is removed, have to use this selector
+*[id*='SiteConfiguratorDialog'] {
+  &.masked {
+    .cke_maximized {
+      z-index: 1999 !important;
+    }
+  }
+}
+
 // next is cke related styles
 .cke_maximized {
   z-index: 2000 !important;
